aws-vpc/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block            = var.vpc_cidr
  enable_dns_hostnames  = true
  enable_dns_support    = true
  instance_tenancy      = "default"
  tags = {
    Name = var.vpc_name
  }
}
